Fix warnings in eclipse scout docs repository